Add reflection and keyword security checks and tests